Fixed tests related to environment specific (likely not reproducible logging.